--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="">
+<html class="no-js" lang="" style="background-color:black">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -77,7 +77,7 @@
                 <div
                   class="wow fadeInRight"
                   data-wow-delay=".4s"
-                  data-countdown="2024/05/10"
+                  data-countdown="2024/05/11"
                 ></div>
                 <!-- countdown end  -->
               </div>
